# martinuvsekac.cz

./: .gitignore  README.md  db.py  main.py  models.py  pyproject.toml  session.py
db/: schema.sql
db/migrations/: 20230415081524_base_tables.sql
templates/: base.html  cart.html  home.html  product.html
